plugins {
    id 'java'
}

group = 'org.qw3rtrun.p3d'
version = '0.0.1-SNAPSHOT'

sourceCompatibility = JavaVersion.VERSION_21
targetCompatibility = JavaVersion.VERSION_21

repositories {
    mavenCentral()
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

compileJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.withType(JavaExec) { jvmArgs += '--enable-preview' }

dependencies {
    implementation 'org.apache.commons:commons-lang3:3.12.0'
    //testImplementation "junit:junit:4.13"
}

compileTestJava {
    options.compilerArgs += ['--enable-preview']
}

tasks.named('test') {
    jvmArgs += '--enable-preview'
    useJUnitPlatform()
}
